--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
                 <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
             </ul>
-            <span class="copyright">COPYRIGHT &copy; 2021 . ALL RIGHT RESERVED BY COLORLIB</span>
+            <span class="copyright">COPYRIGHT &copy; 2022 . ALL RIGHT RESERVED BY PERONA</span>
         </div>
 
 
