--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tesk1</title>
+    <meta name="keywords" content="about , portfolio , service , price , team"/>
+    <meta name="description" content="fdgd gfdgsd fg ,fdg sdfgdfg ,tghyh trhtrh,rthyrth etrgh"/>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.css">
 </head>
