--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             </div> 
             <div class="nav">
                 <ul class="list-nav">
-                    <li><a href="#">home</a><div class="line-heder"></div></li>
-                    <li><a href="#">about</a><div class="line-heder"></div></li>
-                    <li><a href="#">portfolio</a><div class="line-heder"></div></li>
-                    <li><a href="#">service</a><div class="line-heder"></div></li>
-                    <li><a href="#">price</a><div class="line-heder"></div></li>
-                    <li><a href="#">team</a><div class="line-heder"></div></li>
-                    <li><a href="#">blog</a><div class="line-heder"></div></li>
-                    <li><a href="#">contact</a><div class="line-heder"></div></li>
+                    <li><a href="#home">home</a><div class="line-heder"></div></li>
+                    <li><a href="#about">about</a><div class="line-heder"></div></li>
+                    <li><a href="#portfolio">portfolio</a><div class="line-heder"></div></li>
+                    <li><a href="#service">service</a><div class="line-heder"></div></li>
+                    <li><a href="#price">price</a><div class="line-heder"></div></li>
+                    <li><a href="#team">team</a><div class="line-heder"></div></li>
+                    <li><a href="#blog">blog</a><div class="line-heder"></div></li>
+                    <li><a href="#contact">contact</a><div class="line-heder"></div></li>
                     <div class="clear"></div>
                 </ul>
             </div>
@@ -35,7 +35,7 @@
       
     </div> <!-- /header -->
    
-    <div class="home">
+    <div class="home" id="home" >
         <div class="overlay">
             <div class="home-content">
                 <h2 class="title-home">WE ARE CREATIVE AGENCY</h2>
@@ -48,7 +48,7 @@
     </div>
  <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<< about >>>>>>>>>>>>>>>>>>>>>>>> -->
     <div class="space"></div>
-    <div class="about">
+    <div class="about" id="#about" >
         <h2 class="title">Welcome To Website</h2>
         <h2 class="line"></h2>
         <div class="all-item">
@@ -75,7 +75,7 @@
     </div>
      <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<< portfolio >>>>>>>>>>>>>>>>>>>>>>>> -->
     <div class="space"></div>
-    <div class="portfolio">
+    <div class="portfolio" id="#portofolio" >
         <h2 class="title">Featured Works</h2>
         <h2 class="line"></h2>
         <div class="portfolio-content">
@@ -138,7 +138,7 @@
     </div>
     <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<< offer >>>>>>>>>>>>>>>>>>>>>>>> -->
     <div class="space"></div>
-    <div class="offer">
+    <div class="offer" id="#offer" >
         <h2 class="title">What We Offer</h2>
         <h2 class="line"></h2>
         <div class="all-offer-item">
@@ -181,7 +181,7 @@
     </div>
    <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<< service >>>>>>>>>>>>>>>>>>>>>>>> -->
    <div class="space"></div>
-   <div class="service">
+   <div class="service" id="#service" >
        <h2 class="title-left">Why Choose Us</h2>
        <h2 class="line-left"></h2>
        <div class="service-content">
@@ -237,7 +237,7 @@
     </div>
     <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<< Pricing Table >>>>>>>>>>>>>>>>>>>>>>>> -->
     <div class="space"></div>
-    <div class="price">
+    <div class="price" id="#price" >
         <h2 class="title">Pricing Table</h2>
         <h2 class="line"></h2>
         <div class="price-content">
@@ -302,7 +302,7 @@
     
     <!-- ////////////////////////////////////////////////////////////// -->
     <div class="space"></div>
-    <div class="team">
+    <div class="team" id="#team" >
         <h2 class="title">Our Team</h2>
         <h2 class="line"></h2>
         <div class="team-content">
@@ -350,7 +350,7 @@
     </div>
     <!-- <<<<<<<<<<<<<<<<<<<<<<<<<<< recent >>>>>>>>>>>>>>>>>>>>>>>> -->
     <div class="space"></div>
-    <div class="recent">
+    <div class="recent" id="#recent" >
         <h2 class="title">Recent News</h2>
         <h2 class="line"></h2>
         <div class="recent-content">
